--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -223,10 +223,10 @@ to do this dspace need to:
 \section{DSpace: Design and Implementation}
 
 
-\chapter{Spatial Computing in a Constraint Logic Programming Framework}
-This chapter presents the computational framework of the DSpace reasoner, looks at how design are represented in a multiple perspective structure within the framework, and how designs are reasoned about using qualitative spatial reasoning and representation techniques. The framework is written in the declarative programming semantics of Constraint Logic Programming (CLP) using Prolog, CLP over the Reals (CLP($\mathbb{R}$)), and Constraint Handling Rules (CHR).  
+\chapter{Design Computing in a Constraint Logic Programming Framework}
+This chapter presents the computational framework of the DSpace reasoner, looks at how design are represented in a multiple perspective structure within the framework, and how designs are reasoned about in the framework using qualitative spatial reasoning and representation techniques. The DSpace framework is written in the declarative programming semantics of Constraint Logic Programming (CLP) using Prolog, CLP over the Reals (CLP($\mathbb{R}$)), and Constraint Handling Rules (CHR).  
 
-The chapter is organized into two sections. The first section looks at how design are represented from a multiple perspective structure and how they are formally implemented in the DSpace CLP framework. The second section looks at how the reasoner works directly over the representation structure to reason about designs from a qualitative spatial perspective to solve qualification constraints for topology, orientation and distance, and how the reasoner is implemented in the DSpace CLP framework.
+The chapter is organized into two sections. The first section looks at how DSpace represents designs in a multiple perspective structure and how this structure is implemented in the DSpace CLP framework.The second section looks at how the spatial reasoner works directly over the representation structure to reason about designs from a qualitative spatial perspective to solve qualification constraints for topology, orientation and distance, and how the reasoner is implemented in the DSpace CLP framework.
 
 \section{Design Representation in DSpace}
 In DSpace an architectural design is modeled in a multiple perspective structure that incorporate aspects of the design that are quantitative (structural form), functional (artefactual function), and qualitative (spatial abstraction). The object of this representation structure is to provide the DSpace reasoner with mechanisms that connect an expert's design conceptualization to the precise geometric quantities of a CAAD based system.   
@@ -238,18 +238,18 @@ In DSpace an architectural design is modeled in a multiple perspective structure
 \label{mutli-perspective}
 \end{figure}
 
-Within the CLP framework of the DSpace reasoner, the multiple perspective model is represented as Prolog facts and rules. The representation structure is the basis for the spatial constraint solvers of the DSpace reasoner.
+Within the CLP framework of DSpace, the multiple perspective model is represented as Prolog facts and rules. This representation structure is the basis for the spatial constraint solvers of the DSpace reasoner.
 
-This section is structured as follows. The first two subsection looks at the multiple perspective design structure of the DSpace reasoner and how each perspective is formally modeled in the DSpace CLP framework. The last section looks at how a real world design from a CAAD architectural design tool is imported into the DSpace reasoner using the DsSchema / IFC format.
+This section is structured as follows. The first subsection looks at the multiple perspective design structure of the DSpace reasoner. The second subsection looks at how each perspective is formally implemented in the DSpace CLP framework. The last section looks at how a real world design from a CAAD architectural design tool is imported into the DSpace reasoner using the DsSchema / IFC format.
 
 \subsection{Multiple Perspectives}
-In DSpace designs are represented in a multiple perspective structure that incorporate: (1) the physical geometries that pertain to the quantitative structures of the design, (2) the artefactual extensions that pertain to the functional aspects of the design, (3) and spatial abstractions that pertain to the design from a qualitative spatial perspective. The multiple perspective representation of DSpace allows reasoning about design requirements that go beyond purely quantitative geometric reasoning.
+In DSpace architectural designs are represented in a multiple perspective structure that incorporate: (1) the physical geometries that pertain to the quantitative structures of the design, (2) the artefactual extensions that pertain to the functional aspects of the design, (3) and spatial abstractions that pertain to the design from a qualitative spatial perspective. This structure allows reasoning about design requirements that go beyond purely quantitative geometric reasoning.
 
-\subsubsection{Quantitative Model}
-The quantitative representation models the structural form of the design in terms of its' precise geometric features (i.e., layout, shape, location). It represents architectural entities, such as walls, windows, doorways, columns, and rooms, as spatial geometric primitives of polygons, lines and points that correspond to the physical dimensions (length, width, shape) of the design structural form. The quantitative model represents aspects of the design that is similar to CAAD systems. The quantitative geometries are imported directly from a design built in a CAAD system.
+\subsubsection{Quantitative Perspective}
+The quantitative representation of the design models the structural form of the design in terms of its' precise geometric features (i.e., layout, shape, location). Architectural entities, such as walls, windows, doorways, columns, and rooms, are represented as spatial geometric primitives of polygons, lines and points that correspond to the physical dimensions (length, width, shape) of the entities. The quantitative model represents the design perspective that is similar to CAAD programs.
 
-\subsubsection{Functional Model}
-Spatial artefacts are non-physical, spatial extensions of architectural entities that pertain to a specific functional quality of the entity in the context of the design. Artefactual extensions do not have a physical manifestation, however, they become an important part of the design process because they effect the functionality and performance of a design. There are three types of spatial artefacts identified by Bhatt\cite{Bhatt} that are represented in DSpace: \emph{operational space}, \emph{functional space}, and \emph{range space}.
+\subsubsection{Functional Perspective}
+Spatial artefacts are non-physical, spatial extensions of architectural entities that pertain to a specific functional quality of the entity. Artefactual extensions do not have a physical manifestation, however, they are an important part of the design representation because they effect the functionality and performance of the design. There are three types of spatial artefacts identified by Bhatt\cite{Bhatt} that are represented in DSpace: \emph{operational space}, \emph{functional space}, and \emph{range space}.
 
 \begin{figure}[H]
  \centering
@@ -264,7 +264,7 @@ Spatial artefacts are non-physical, spatial extensions of architectural entities
 
 The operational space encompasses the region of space required by an object to preform its' function. For example, the operational space of a door is the area in which a door can occupy during its' operation, opening and closing (see figure \ref{operational-space}). This space is dynamic in the sense that it represents the configurable space of the physical doorway. 
 
-The functional space encompasses the region of space that is required for an object to function or for a person to operate an object. For example, the functional space of a doorway is the total area needed for a person to operate, open and close, as well as any additional space need to navigate entirely through the doorway (see figure \ref{functional-space}). 
+The functional space encompasses the region of space that is required for an object to function itself or the space for a person to operate an object. For example, the functional space of a doorway is the total area needed for a person to operate, open and close, as well as any additional space need to navigate entirely through the doorway (see figure \ref{functional-space}). 
 
 The range space pertains to a region of space that encompass the range of a sensor (i.e., camera, motion sensor). For example, the range space of a camera is defined by its depth of field and angle of view. It represents the total space that is under surveillance of the camera (see figure \ref{range-space}).
 
@@ -277,12 +277,12 @@ The range space pertains to a region of space that encompass the range of a sens
 
 Artefactual extensions directly effect how well a design functions. For example, a sink in a bathroom has a functional space, the space a person occupies while washing his/her hands at the sink. If this space is interfered by (i.e., topologically overlapping) the functional and/or physical space of a doorway, this will cause a circulation problem when both the doorway and sink are simultaneously being operated, i.e., a collision between the person washing his/her hands and the doorway being opened. In this example, the functional aspects of the bathrooms design with regard to the mitigation of circulation problems is directly influenced by the spatial configuration of the non-physical artefactual extensions of the design. 
 
-\subsubsection{Qualitative Model}
+\subsubsection{Qualitative Perspective}
 In DSpace architectural entities have spatially abstracted representations. This allows DSpace to reason about the the design from a qualitative level of abstraction with regards to the its' spatial characteristics of topology, orientation and distance. This type of qualitative spatial reasoning, reasons over the abstract feature space of the design using abstract spatial structures of points, directed points, and convex hulls. 
 
-Architectural entities, however, are not directly modeled as abstract spatial objects. In DSpace their quantitative geometries are spatially abstracted, through spatial transformation rules, into qualitative spatial objects. The process of spatially abstracting an architectural entity depends on the spatial characteristics of the structural form, and an interpretation of the intrinsic nature of an entity within an architectural / design context. For example, the spatial abstraction of a doorway as a directed point is defined not only by its' physical form but also by the interpretation of the doorway's intrinsic direction. 
+Architectural entities are not directly modeled, as they are in the quantitative representation, as abstract spatial objects. Abstract spatial objects are generated by transformation rules that abstract the quantitative geometries of the architectural entities. The process of spatially abstracting an architectural entity depends on the spatial characteristics of the entity's structural form, and an interpretation of the intrinsic nature of an entity within an architectural / design context. For example, the abstracted representation of a doorway as a directed point is defined not only by its' physical form but also by the interpretation of the doorway's intrinsic direction. 
 
-The remainder of this section shows how the abstract representation of architectural entities and interior designs objects are spatially abstracted into points, directed points, and convex hulls. Table \ref{spatial abstractions} shows which spatial abstractions each architectural entity can be transformed to. 
+The remainder of this section shows how architectural entities and interior designs objects are spatially abstracted into points, directed points, and convex hulls. Table \ref{spatial abstractions} shows which spatial abstractions each architectural entity can be transformed into. 
 
 \begin{table}[H]
   \begin{center}
@@ -303,7 +303,7 @@ The remainder of this section shows how the abstract representation of architect
 \end{table} 
 
 \noindent \emph{\large Point} \\
-\indent All architectural entities and interior design objects have a point abstraction that is defined as the centroid of the entity's physical polygon space. Figure \ref{point-abs} shows the point abstraction for a doorway. Note that the point is the centroid of the doorways physical geometry. The point abstraction is used in orientational reasoning and is therefore used as an approximation of the objects location in the design. In general, the centroid is a good point approximation of location because it is a generalization of polygon space into a single point. 
+\indent All architectural entities and interior design objects have a point abstraction that is defined as the centroid of the entity's physical polygon space. Figure \ref{point-abs} shows the point abstraction for a doorway. Note that the point is the centroid of the doorways physical geometry. The point abstraction is used in orientational reasoning and is therefore used as an approximation of the objects location in the design. In general, the centroid is a good point approximation of location because it is a generalization of polygon space as a single point. 
 
 \begin{figure}[H]
 \centering
@@ -313,7 +313,9 @@ The remainder of this section shows how the abstract representation of architect
 \end{figure}
 
 \noindent \emph{\large Directed Point} \\
-\indent Walls, doorways, windows, and some interior design object have a directed point abstraction. A directed point is represented as a tuple (\emph{point}, \emph{direction}). The point is defined as the centroid of the quantitative polygon space. The direction is defined either by the user, as is the case for interior design objects, or by an intrinsic spatial property of the entity, such as doorways, walls, and windows. In the case of these entities, direction is defined based on the interpretation of the nature of a doorway, wall, or window within the context of a design. For these entities, direction is interpreted as a vector that emanates out from its' point abstraction towards the room / space it is contained in. Specifically, direction is defined as the perpendicular vector to the intrinsic x-axis of the object. Figure \ref{dir-point-abs} shows the directed point abstraction for a doorway. Not that the direction is pointing perpendicular to the x-axis of the doorways physical geometry. Based on this definition there will be two perpendicular lines that define the direction. In this situation, the context of the space in which the entity is located is need to decided which of the two directions to use.  
+\indent Walls, doorways, windows, and some interior design object have a directed point abstraction. A directed point is represented as a tuple (\emph{Cartesian point}, \emph{direction}). The point is defined as the centroid of the quantitative polygon space, as it is in the point abstraction. The direction is defined either by the user, as is the case for interior design objects, or by an intrinsic spatial property of the entity, as is the case for doorways, walls, and windows.
+
+For these entities, direction is defined based on the interpretation of the nature of the entity within the context of a design. Formally, direction is interpreted as a vector that emanates out from an entity's point abstraction towards the room / space it is contained in. Specifically, direction is defined as the perpendicular vector to the intrinsic x-axis of the object. Figure \ref{dir-point-abs} shows the directed point abstraction for a doorway. Not that the direction is pointing perpendicular to the x-axis of the doorways physical geometry. Based on this definition there will be two perpendicular lines that define the direction. In this situation, the context of the space in which the entity is located is need to decided which of the two directions to use.  
 
 \begin{figure}[H]\label{dir-point-abs}
 \centering
@@ -327,7 +329,7 @@ The remainder of this section shows how the abstract representation of architect
 TODO: figure for convex hull abs
 
  \subsection{Representing a Design in a CLP Framework}
-The multiple perspective design model is represented in the DSpace CLP framework as Prolog a facts and rules. The facts make up a factbase that stores a table of architectural entities and their types. This table has a single entry for every entity in the design and is the basis for accessing entities in the design. Rules are used to bind architectural entities (via ids) to their multiple geometries: physical and artefactual. Transformation rules are used to abstracted the quantitative geometries into abstract spatial objects. 
+The multiple perspective design structure is implemented in the DSpace CLP framework as Prolog facts and rules. Prolog facts make up a factbase that stores a table of architectural entities to their architectural types (i.e., wall, door, window, desk, etc.). There is a single entry for each entity in the design. Rules are used to bind architectural entities (via a unique identifier) to their multiple perspective geometries: physical and artefactual. Transformation rules abstract quantitative geometries into abstract spatial objects. 
 
 \begin{figure}[H]
 \centering
@@ -337,7 +339,7 @@ The multiple perspective design model is represented in the DSpace CLP framework
 \end{figure}
 
 \subsubsection{Factbase}
-The representation of a design starts with a factbase in Prolog that binds architectural entities (via a unique identifier) to architectural types (wall, door, window, column) or interior design types (display case, chair, desk). Each architectural entity in the design has a single entry in the factbase. An entry is a Prolog predicate that takes two atoms as arguments: an identifier and entity type. The factbase is instantiated automatically during the import process from the CAAD system. 
+The representation of a design starts with a factbase in Prolog that binds architectural entities (via a unique identifier) to architectural types (wall, door, window, column, display case, chair, desk, etc.). Each architectural entity in the design has a single entry in the factbase. An entry is a Prolog predicate that takes two atoms as arguments: an identifier and an architectural type. The factbase is instantiated automatically during the import process from the CAAD system. 
 
 The following Prolog code shows three instantiated facts (predicates) for a doorway, window, and desk. Note that the ds prefix refers to the DsScheme which will be discussed in a later section.  
 \begin{verbatim}
@@ -347,14 +349,8 @@ The following Prolog code shows three instantiated facts (predicates) for a door
 \end{verbatim}
 
 \subsubsection{Quantitative and Artefactual Geometries}
-Prolog rules link an entity, via its' id, to its' multiple perspective geometries. Each entity has a single rule for its' physical, and artefactual (functional, operational, and range) geometries. All architectural entities must have a physical geometry, but can have zero, one, two, or three artefactual geometries. For example, a door has a functional and operational space but does not have a range space. Likewise, a column has no artefactual extensions. 
+Prolog rules link an entity (via its' id) to its' multiple perspective geometries. Each entity has a single rule for its' physical, functional, operational, and range geometries. All architectural entities must have a physical geometry, but may have zero or more artefactual geometries. For example, a doorway has a functional and operational space but does not have a range space. Likewise, a column has no artefactual extensions. The following Prolog rules define the physical and artefactual geometries of a doorways with id \emph{door1}. There is a single rule for each perspective. Each rule takes two arguments, an id and variable that will be instantiated with the geometry. 
 
-The structural and artefactual geometries are defined by spatial geometric primitives: polygons, lines, and points. These primitives are Prolog rules themselves that take the quantitative point data that defines the entity and return an instantiated spatial primitive that will be used by the DSpace reasoner. 
-\begin{verbatim}
-   spatial_primitive(Geometry, polygon([(1,1),(4,2),(5,1)])).
-\end{verbatim}
-
-The following Prolog rules define the physical and artefactual geometries of a doorways with id \emph{door1}. Note that there is a single rule for each perspective, but each rule has an identical form; each rule takes two arguments (id and variable to store the geometry) and is defined by spatial primitives using the \emph{spatial\_primitive} rule. 
 \begin{verbatim}
    physical_geometry(door1, Geometry) :-
            spatial_primitive(Geometry, polygon([(1,1),(3,5),(4,5),(2,2)])).
@@ -366,7 +362,9 @@ The following Prolog rules define the physical and artefactual geometries of a d
            spatial_primitive(Geometry, polygon(PtList)).
 \end{verbatim}
 
-The rule base can be queried to retrieve a geometry. For example, to get the physical geometry for a \emph{door1} the following query is made:
+Physical and artefactual geometries are defined by spatial geometric primitives: polygons, lines, and points. These primitives are defined by Prolog rules that take the quantitative point data return an instantiated spatial primitive. The spatial primitive has two arguments. The first is a variable that will be instantiated as a spatial primitive object, and the second is the quantitative point data. 
+
+The multiple perspective rulebase can be queried to retrieve a geometry. For example, to get the physical geometry for a \emph{door1} the following query is made:
 \begin{verbatim}
    physical_geometry(door1, Geometry).
 \end{verbatim} 
@@ -374,10 +372,10 @@ The rule base can be queried to retrieve a geometry. For example, to get the phy
 \begin{verbatim}
    functional_geometry(door1, FunctionalGeometry).
 \end{verbatim}
-\emph{Door1}'s functional geometry is now be stored in the FunctionalGeometry variable. Similar queries are made to retrieve the operational and range space geometries.
+\emph{Door1}'s functional geometry is now stored in the FunctionalGeometry variable. Similar queries are made to retrieve the operational and range space geometries.
 
 \subsubsection{Transformations for Spatial Abstractions}
-Spatial abstractions are calculated by transformations of the quantitative geometries. Spatial transformations depends on the architectural entity type, the target spatial abstraction (point, directed point, or convex hull), and something the context of the space (direction of door into or out of a specific room). The following is Prolog code for the transformation rules based on the interpretation of the spatial abstraction of architectural entities in the previous section.
+Spatial abstracted objects are calculated by transformation rules of the quantitative geometries. Spatial transformations depends on the architectural entity type, the abstraction type (point, directed point, or convex hull), and sometimes a contextual identifier (direction of door into or out of a specific room). The following is transformation rules are based on the interpretation of the spatial abstraction of architectural entities in the previous section.
 \begin{verbatim}
    point_abstraction(door1, Point) :-
            quantitative_geometry(door1, Quant),
